[2단계 - 블랙잭 베팅] 구름(김민수) 미션 제출합니다. (#675)
* refactor: controller 이름 변경 및 패키지화

* fix: 플레이어 턴 재귀 에러 수정

* refactor: 예외 발생 시 스택 트레이스 출력하지 않음

* refactor: 게임 승패 규칙 변경

* refactor: 딜러의 승패 판단 여부 개선

* refactor: 덱 생성 분리

* refactor: 중복된 메서드 제거

* refactor: Hand 접근 제어자 변경

* refactor: 딜러의 보여지는 카드 부분 도메인 책임 이동

* refactor: containsExactly를 통해 테스트 개선

* refactor: 블랙잭 승무패 테스트 추가

* refactor: Hand 생성 테스트 삭제

* refactor: 테스트 코드 개선

* fix: 블랙잭 승패 조건 수정

* refactor: 메서드 순서 변경

* refactor: 블랙잭 상태 테스트 추가

* refactor: 딜러 보여지는 카드 테스트

* docs: 도메인 용어 수정

* docs: 2단계 블랙잭 배팅에 대한 요구 사항 작성

* feat: Money 구현

* feat: 베팅 정보를 저장 구현

* feat: 플레이어 게임 결과 구현

* feat: 베팅 금액 입력 구현

* refactor: 딜러가 플레이어의 승패 결과를 판단

* feat: 최종 수익을 출력

* refactor: 배팅 금액 범위 테스트 개선

* refactor: 플레이어와 딜러의 수익 계산

* refactor: 관심사별 패키지화

* fix: 덱 접근 제어자 변경

* refactor: 사용하지 않는 메서드 제거

* refactor: 딜러의 승패 판단을 분리

* refactor: 테스트 패키지화

* refactor: 코드 정리

* refactor: reduce -> mapToInt로 변경

* feat: Name 클래스 동등성 비교 추가

* refactor: 출력 코드 개선

* refactor: 동등성 비교 코드 개선

* refactor: 테스트 가독성 개선

* refactor: 컨트롤러 코드 개선

* refactor: 원시값, 일급 컬렉션 value로 필드 메서드 수정

* refactor: 딜러에서 승패 판단 분리

* refactor: 승패 판단 로직 이동

* refactor: 메서드 명 수정

* refactor: hand를 불변 객체로 개선

* refactor: 생성자 수정

* refactor: 초기 카드 뽑기 코드 개선

* refactor: 카드 캐싱 기능 추가

* refactor: 캐싱 코드 개선

* refactor: 뷰에서 딜러 이름 처리 수정

* fix: 딜러 출력 수정