@@ -1,8 +1,11 @@
-package blackjack.domain;
+package blackjack.domain.participant;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatCode;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
+import blackjack.domain.card.Deck;
+import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -12,13 +15,15 @@ class ParticipantsTest {
     @DisplayName("생성 테스트")
     @Test
     void create() {
-        assertThatCode(() -> new Participants(List.of("아톰", "구름")));
+        assertThatCode(() -> new Participants(List.of("아톰", "구름")))
+                .doesNotThrowAnyException();
     }
 
     @DisplayName("참여자들은 딜러 포함 최소 2명 이상이어야 한다.")
     @Test
     void validatePlayerSize() {
-        assertThatThrownBy(() -> new Participants(List.of()))
+        List<String> empty = Collections.emptyList();
+        assertThatThrownBy(() -> new Participants(empty))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -36,5 +41,18 @@ class ParticipantsTest {
         List<String> playerNames = List.of("딜러");
         assertThatThrownBy(() -> new Participants(playerNames))
                 .isInstanceOf(IllegalArgumentException.class);
+    }
+
+    @DisplayName("참여자들은 초기 카드를 뽑을 수 있다.")
+    @Test
+    void drawInitialCards() {
+        Participants participants = new Participants(List.of("아톰", "구름"));
+        Deck deck = Deck.createShuffledDeck();
+
+        participants.drawInitialCards(deck);
+
+        assertThat(participants.getDealer().getCards()).hasSize(2);
+        assertThat(participants.getPlayers().get(0).getCards()).hasSize(2);
+        assertThat(participants.getPlayers().get(1).getCards()).hasSize(2);
     }
 }
